# cmake-ode

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/shaders/: Console.frag  Cubes.frag  Cubes.vert  Debug.vert  Default.frag  Default.vert  Diffuse.vert  Discard.frag  Discard.vert  Flat.frag  Flat.vert  Font.frag  Font.vert  Gouraud.frag  Gouraud.vert  Phong.frag  Phong.vert  Shadow.frag  Shadow.vert  Stone.frag  Stone.vert  Triangle.frag  Triangle.vert
data/stones/: Black-22.mesh  Black-22.stone  Black-25.mesh  Black-25.stone  Black-28.mesh  Black-28.stone  Black-30.mesh  Black-30.stone  Black-31.mesh  Black-31.stone  Black-32.mesh  Black-32.stone  Black-33.mesh  Black-33.stone  Black-34.mesh  Black-34.stone
src/ClientServer/: CMakeLists.txt  Client.cpp  Server.cpp
src/core/: CMakeLists.txt  Core.cpp
src/cubes/: Activation.h  CMakeLists.txt  Engine.h  Simulation.h  View.h  ViewObject.h
src/game/: CMakeLists.txt  CommandLine.cpp  CompressionDemo.cpp  Cubes.cpp  FontManager.cpp  Game.cpp  GameClient.h  GameMessages.h  GamePackets.h  GameServer.h  Global.h  LockstepDemo.cpp  ShaderManager.cpp  Snapshot.h  StoneManager.cpp  SyncDemo.cpp  SyncDemo.h
src/network/: BSDSocket.cpp  CMakeLists.txt
src/protocol/: CMakeLists.txt  ConnectionPacket.h
src/virtualgo/: CMakeLists.txt
tests/ClientServer/: TestClientServer.cpp  TestClientServer.h  TestMessages.h  TestPackets.h
tests/core/: TestCore.cpp
tests/ode/: CMakeLists.txt
